# calamares-core

rebornos_scripts/archlinux_packaging/: PKGBUILD
src/modules/driveselector/: CMakeLists.txt  Config.cpp  Config.h  DriveSelectorQmlViewStep.cpp  DriveSelectorQmlViewStep.h  DriveSelectorQmlViewStep.qml  DriveSelectorQmlViewStep.qrc
